*** 2.6.2 (2021-09-20)
    - Fixed a bug where Bronstein delay games with no initial time would run
      into negative time.
    - Bronstein delays are displayed on the same line as the total time again
      when decisecond display is disabled.

*** 2.6.1 (2021-09-12)
    - Text fixes.

*** 2.6.0 (2021-09-04)
    - New translation: French.

*** 2.5.1 (2021-08-21)
    - The about screen is now scrollable to be readable when there is less
      screen space.

*** 2.5.0 (2021-06-19)
    - Game time and delay can be specified in seconds, minutes or hours.
    - Time display shows hours.
    - Time display can optionally show deciseconds.

*** 2.4.1 (2021-06-12)
    - Fixed the pause button for Bronstein delay games with no initial time.

*** 2.4.0 (2021-05-30)
    - Players can now have different initial game time.

*** 2.3.0 (2021-05-28)
    - Bronstein delay games with no initial time is now supported.

*** 2.2.1 (2021-02-07)
    - With Fischer delay, the extra time is now added at the end of player
      turns, instead of at the beginning.

*** 2.2.0 (2020-07-06)
    - Added an option to use a black background on the main game screen for
      potential power savings with OLED screens.

*** 2.1.2 (2019-05-30)
    - Fixed a bug causing player 1 to sometimes not receive the initial delay.
    - Fixed a bug causing some delays to be skipped after resuming a paused
      game.

*** 2.1.1 (2019-04-28)
    - New translation: Norwegian Bokmål.

*** 2.1.0 (2019-04-14)
    - Fixed an issue with clocks disappearing on Android 7.0 and above.
    - The minimum Android version was corrected to Android 5.0 and above, since
      SCC is using scalable vector graphics.
    - Material theme is now applied in menus and dialogs.

*** 2.0.0 (2019-03-24)
    - Major overhaul of the user interface.
    - Should now work on modern Android versions.

*** 1.2.0 (2010-11-28)
    - Added ability to move SCC to SD storage.

*** 1.1.3 (2010-11-21)