@@ -39,5 +39,6 @@ https://www.apache.org/licenses/LICENSE-2.0.html
 
 Simple Chess Clock was created in 2010 by Carter Dewey.
 Simen Heggestøyl is maintaining the app since 2019.
-
-Contributors: skyhelix, Yuhui Su, Sitavi.
+French translation by Sitavi.
+Spanish translation by Daniel Garcia Pallaviccini (tlacuilo@tlacuilo.biz).
+Code contributions by skyhelix and Yuhui Su.
