@@ -1,0 +1,46 @@
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+  <string name="dialog_button_no">No</string>
+  <string name="dialog_button_yes">Sís</string>
+  <string name="dialog_message_about">Diseño/codificación: Carter Dewey &amp; Simen Heggestøyl\n\nSCC es software gratuito cuyo uso se ampara en la licencia GNU GPLv3.  Puedes ver esa licencia en \nhttps://www.gnu.org/licenses/gpl-3.0.html\n\nPartes del icono de esta aplicación se usan bajo licencia GFDL. Puedes ver esa segunda licencia en \nhttps://www.gnu.org/copyleft/fdl.html\n\nLos iconos de la aplicación se usan bajo la licencia Apache 2.0, que puedes ver en \nhttps://www.apache.org/licenses/LICENSE-2.0.html\n\nSi quieres notificar de fallos o ver el código fuente, visita\nhttps://github.com/simenheg/simple-chess-clock</string>
+  <string name="dialog_message_reset">¿Reiniciar los dos relojes?</string>
+  <string name="pref_category_about">Información</string>
+  <string name="pref_category_other">Otras opciones</string>
+  <string name="pref_category_time">Tiempo de juego</string>
+  <string name="pref_dialog_title_enter_time">Escribe el tiempo</string>
+  <string name="pref_dialog_title_delay_type">Elige el retraso del tiempo</string>
+  <string name="pref_dialog_title_time_units">Elige las unidades de tiempo</string>
+  <string name="pref_summary_alert_ringtone">Escoger el tono de alarma que ha de sonar cuando el tiempo transcurra.</string>
+  <string name="pref_summary_delay_length">Fijar el período de tiempo que vas a usar para los retrasos.</string>
+  <string name="pref_summary_delay_type">Fijar el esquema de retraso de tiempo que vas a usar mientras juegues.</string>
+  <string name="pref_summary_delay_length_units">Fijar en qué unidades se va a indicar la duración de los retrasos.</string>
+  <string name="pref_summary_haptic_feedback">Vibrar ligeramente cuando se pulsen botones.</string>
+  <string name="pref_summary_black_background">Ahorrar batería en pantallas OLED.</string>
+  <string name="pref_summary_show_deciseconds">Mostrar décimas de segundo cuando el reloj o el retraso sean menores de 10 segundos.</string>
+  <string name="pref_summary_starting_time">Fijar con cuánto tiempo inicia cada jugador.</string>
+  <string name="pref_summary_starting_time_2">Fijar con cuánto tiempo inicia el Jugador 2.</string>
+  <string name="pref_summary_starting_time_units">Fijar en qué unidades se va a indicar el tiempo de juego.</string>
+  <string name="pref_summary_different_starting_time">Fijar un tiempo de juego diferente para cada jugador.</string>
+  <string name="pref_title_about">Información al respecto de Simple Chess Clock</string>
+  <string name="pref_title_alert_ringtone">Tono de alarma</string>
+  <string name="pref_title_delay_length">Duración del retraso</string>
+  <string name="pref_title_delay_type">Tipo de retraso</string>
+  <string name="pref_title_delay_length_units">Unidades de duración del retraso</string>
+  <string name="pref_title_haptic_feedback">Retroalimentación táctil</string>
+  <string name="pref_title_black_background">Fondo oscuro</string>
+  <string name="pref_title_show_deciseconds">Mostrar décimas de segundo</string>
+  <string name="pref_title_starting_time">Tiempo de juego</string>
+  <string name="pref_title_starting_time_2">Tiempo de juego (Jugador 2)</string>
+  <string name="pref_title_starting_time_units">Unidades del tiempo de juego</string>
+  <string name="pref_title_different_starting_time">Diferentes tiempos de juego</string>
+  <string-array name="delay_types">
+    <item>Ninguno</item>
+    <item>Fischer</item>
+    <item>Bronstein</item>
+  </string-array>
+  <string-array name="time_units">
+    <item>Segundos</item>
+    <item>Minutos</item>
+    <item>Horas</item>
+  </string-array>
+</resources>
