@@ -1,3 +1,6 @@
+*** ?.?.? (TBD)
+    - New translation: Spanish, by Daniel Garcia Pallaviccini.
+
 *** 2.6.2 (2021-09-20)
     - Fixed a bug where Bronstein delay games with no initial time would run
       into negative time.
@@ -8,7 +11,7 @@
     - Text fixes.
 
 *** 2.6.0 (2021-09-04)
-    - New translation: French.
+    - New translation: French, by Sitavi.
 
 *** 2.5.1 (2021-08-21)
     - The about screen is now scrollable to be readable when there is less
